--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <div class="modal-body">
       <p><strong>Privacy Policy</strong></p>
 
-      <p>At EMI Calculator (<a href="https://yourusername.github.io/emi-calculator/" target="_blank" style="color: #4CAF50;">https://yourusername.github.io/emi-calculator/</a>), we take your privacy seriously. This Privacy Policy outlines the types of personal information we collect and how we use, store, and protect it.</p>
+      <p>At EMI Calculator (<a href="https://yourusername.github.io/emi-calculator/" target="_blank" style="color: #4CAF50;">https://emi-calculator00.netlify.app/</a>), we take your privacy seriously. This Privacy Policy outlines the types of personal information we collect and how we use, store, and protect it.</p>
 
       <p><strong>Information We Collect</strong><br>
       We do not collect any personal data from users. This website is a simple EMI calculator tool that functions entirely on the client side. No form submissions or personal inputs are stored or transmitted to any server.</p>
