--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>EMI Calculator</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2316457251050886"
-     crossorigin="anonymous"></script>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -297,7 +295,7 @@
 <body>
 
   <div class="intro">
-    <h1>EMI Calculator</h1>
+    <h1>Free EMI Calculator – Calculate Your Loan Instantly</h1>
     <p>Calculate your monthly loan repayments quickly and easily. Just enter the loan amount, interest rate, and tenure, and get your EMI, total interest, and total repayment instantly.</p>
   </div>
 
@@ -355,7 +353,7 @@
     <div class="modal-body">
       <p><strong>Privacy Policy</strong></p>
 
-      <p>At EMI Calculator (<a href="https://yourusername.github.io/emi-calculator/" target="_blank" style="color: #4CAF50;">https://emi-calculator00.netlify.app/</a>), we take your privacy seriously. This Privacy Policy outlines the types of personal information we collect and how we use, store, and protect it.</p>
+      <p>At EMI Calculator (<a href="https://yourusername.github.io/emi-calculator/" target="_blank" style="color: #4CAF50;">https://yourusername.github.io/emi-calculator/</a>), we take your privacy seriously. This Privacy Policy outlines the types of personal information we collect and how we use, store, and protect it.</p>
 
       <p><strong>Information We Collect</strong><br>
       We do not collect any personal data from users. This website is a simple EMI calculator tool that functions entirely on the client side. No form submissions or personal inputs are stored or transmitted to any server.</p>
@@ -399,6 +397,48 @@
     </div>
   </div>
 
+
+  <!-- Q&A Section START -->
+  <div class="container" style="margin-top: 40px;">
+    <h2>Q&A – Personal Loan EMI Calculator</h2>
+
+    <p><strong>What is a Personal Loan EMI Calculator?</strong><br>
+    A personal loan EMI calculator is an online tool that helps you calculate your monthly loan repayments. It gives you a quick estimate of your EMI based on the loan amount, interest rate, and loan tenure.</p>
+
+    <p><strong>Can I calculate EMI for SBI personal loan using this tool?</strong><br>
+    Yes, this calculator works for SBI personal loans or any other bank like HDFC, ICICI, Axis, or IDFC.</p>
+
+    <p><strong>How does the HDFC personal loan calculator work?</strong><br>
+    Just enter the interest rate from HDFC, loan amount, and tenure to get instant EMI, total interest, and total payable amount.</p>
+
+    <p><strong>Is it useful for ICICI Bank personal loan calculation?</strong><br>
+    Yes, use this tool like ICICI personal loan calculator – input their rate and tenure, and get results instantly.</p>
+
+    <p><strong>Can I use it for Axis Bank personal loans?</strong><br>
+    Absolutely! This tool supports all banks — just enter details.</p>
+
+    <p><strong>What is a personal loan interest rate calculator?</strong><br>
+    It helps you understand how much total interest you’ll pay. This EMI tool shows both interest and total repayment value.</p>
+
+    <p><strong>How is EMI calculated based on salary in SBI?</strong><br>
+    While this calculator doesn’t check eligibility, it helps decide if EMI fits your salary and budget.</p>
+
+    <p><strong>Can I calculate EMI for loans from HDFC, ICICI, and BOB?</strong><br>
+    Yes. Whether you’re looking for HDFC, ICICI, or BOB EMI calculator – this tool works for all.</p>
+
+    <p><strong>Does this tool check loan eligibility?</strong><br>
+    No, but it shows your EMI amount which helps in planning and estimating repayment capacity.</p>
+
+    <p><strong>What’s the benefit of using this EMI calculator?</strong><br>
+    It’s fast, free, and gives you accurate estimates before you apply for a personal loan.</p>
+  </div>
+  <!-- Q&A Section END -->
+
+  <!-- Rest of your footer and modals/scripts -->
+</body>
+</html>
+
+
   <script>
     function calculateEMI() {
       let P = parseFloat(document.getElementById('amount').value);
@@ -441,4 +481,3 @@
 
 </body>
 </html>
-
