--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="Free EMI Calculator for personal loans. Instantly calculate EMI, interest, and total repayment for SBI, HDFC, ICICI, Axis, and more.">
+  <meta name="keywords" content="personal loan emi calculator, sbi personal loan calculator, hdfc emi calculator, icici loan calculator, emi calculator online">
+  <meta name="google-site-verification" content="XhpUoTAd-yJgp6IOi8qCc8VkFiAnCDoF4dNfz5qa-GE" />
   <title>EMI Calculator</title>
   <style>
     body {
